fix: move files to try

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,7 +3,7 @@ blank_issues_enabled: false  # Desativa a criação de issues em branco
 contact_links:
   - name: ❓ Perguntas e Suporte
     url: https://github.com/usuario/repositorio/discussions
-    about: Use o fórum de discussões para dúvidas gerais e suporte.
+    about: Use o fórum de discussões para dúvidas gerais e suporte. (Need to configure)
 
 issue_templates:
   - name: 🐛 Bug Report
