--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -4,6 +4,7 @@ contact_links:
   - name: ❓ Perguntas e Suporte
     url: question.md
     about: Use o fórum de discussões para dúvidas gerais e suporte. (Need to configure)
+    labels: [Question]
 
 issue_templates:
   - name: 🐛 Bug Report
